Fixing nav trigger z-index issue

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -78,7 +78,6 @@ img {
   background-color: $background-colour-main;
   position: relative;
   font-size: $font-size-main;
-  overflow: hidden;
   z-index: 3;
 }
 
@@ -133,10 +132,12 @@ img {
   position: fixed;
   display: none;
   z-index: 1;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
   @include breakpoint(800) {
     display: block;
-    bottom: 0;
     width: 100%;
     text-align: center;
     background-color: $background-colour-two;
@@ -161,6 +162,8 @@ main {
   overflow: hidden;
   position: relative;
   z-index: 2;
+  height: auto;
+  width: 100%;
 }
 
 .main-content {
@@ -414,7 +417,8 @@ select {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 0;
+  //? TODO: Footer is acting up in IOs unless z-index is -1 here.
+  z-index: -1;
   overflow-x: hidden;
   overflow-y: scroll;
 
